move use of firebase/auth from backend to client to allow for unexpired sessions (fix Ezer-Lachaim#254)
