# openapi.yaml
@@ -76,47 +76,6 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/RideRequester'
-  /users/login:
-    post:
-      tags:
-        - user
-      summary: Logs user into the system
-      description: ''
-      operationId: loginUser
-      requestBody:
-        description: User login credentials
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                email:
-                  type: string
-                password:
-                  type: string
-              required:
-                - email
-                - password
-      responses:
-        '200':
-          description: successful operation
-          headers:
-            X-Rate-Limit:
-              description: calls per hour allowed by the user
-              schema:
-                type: integer
-                format: int32
-            X-Expires-After:
-              description: date in UTC when token expires
-              schema:
-                type: string
-                format: date-time
-          content:
-            application/json:
-              schema:
-                type: string
-        '400':
-          description: Invalid username/password supplied
   /users/logout:
     get:
       tags:
@@ -169,12 +128,8 @@ paths:
             schema:
               $ref: '#/components/schemas/UpdateInitialPasswordRequest'
       responses:
-        '200':
+        '202':
           description: Successful operation
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/UpdateInitialPasswordResponse'
         '400':
           description: Invalid user ID supplied
         '404':
@@ -249,26 +204,6 @@ paths:
           description: Invalid username supplied
         '404':
           description: User not found
-  /users/reset_password:
-    post:
-      tags:
-        - user
-      summary: Send reset password email
-      description: sends a reset password email to the specified user.
-      operationId: sendResetPasswordEmail
-      requestBody:
-        description: User email to receive the reset password link
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/ResetPasswordRequest'
-      responses:
-        '204':
-          description: Reset password link sent successfully
-        '400':
-          description: Invalid request body
-        '404':
-          description: User not found (email not registered)
   /users/registerFcmToken:
     post:
       tags:
@@ -707,15 +642,11 @@ components:
               - AccessibleCar
               - PatientDelivery
     CreateUserResponse:
-      properties: 
+      properties:
         user:
           $ref: '#/components/schemas/RideRequester'
-        token:
-          type: string
-    UpdateInitialPasswordResponse:
-      properties: 
-        token:
-          type: string
+      required:
+        - user
     UpdateInitialPasswordRequest:
       type: object
       properties:
@@ -730,14 +661,6 @@ components:
           type: string
       required:
         - fcmToken
-
-    ResetPasswordRequest:
-      type: object
-      properties:
-        email:
-          type: string
-      required:
-        - email
 
     Patient:
       properties:
